Removed lots of code to make the parser consistent. The getBigDecimal() method will now return null on a missing entry as the other object getters do.
git-svn-id: https://svn.apache.org/repos/asf/turbine/core/branches/TURBINE_2_3_BRANCH@644892 13f79535-47bb-0310-9956-ffa450edef68